playbooks/files/kubernetes/keycloack.yml
apiVersion: v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - env:
            - name: DB_VENDOR
              value: h2
            - name: KEYCLOAK_IMPORT
              value: /home/jenkins/keycloak.json
            - name: KEYCLOAK_PASSWORD
              value: password
            - name: KEYCLOAK_USER
              value: admin
          image: jboss/keycloak:latest
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /home/jenkins/keycloak.json
              name: keycloak-pvc
      restartPolicy: Always
      volumes:
        - name: keycloak-pvc
          persistentVolumeClaim:
            claimName: keycloak-pvc

#this runs in port 32534
