playbooks/files/kubernetes/local-keycloak-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: local-keycloak
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/local-keycloak: "true"
  podSelector:
    matchLabels:
      io.kompose.network/local-keycloak: "true"
